OLD/manual/manifests/gravitee/22-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee-gateway
  namespace: apim-gravitee
spec:
  selector:
    app: gravitee-gateway
  ports:
  - port: 8082
    targetPort: 8082
