OLD/manual/manifests/gravitee/50-ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravitee-console
  namespace: apim-gravitee
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apim-gravitee.local
    secretName: gravitee-console-tls
  rules:
  - host: apim-gravitee.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gravitee-console
            port:
              number: 8084
